tests/baselines/reference/iterableArrayPattern3(strict=true).errors.txt
iterableArrayPattern3.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
iterableArrayPattern3.ts(2,25): error TS7008: Member 'y' implicitly has an 'any' type.


==== iterableArrayPattern3.ts (2 errors) ====
    class Bar { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo extends Bar { y }
                            ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var a: Bar, b: Bar;
    [a, b] = new FooIterator;